# Graphite

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject-winx64.bat  README.md  dokumentacija-mauricio.docx  dokumentacija-mauricio.md  premake5.lua
Graphite/: GeoEntity.cpp  Plain.h
Graphite/src/: CMakeLists.txt  Graphite.h
Graphite/src/Graphite/: CMakeLists.txt
Graphite/src/Graphite/Assets/: Animation2D.cpp  Animation2D.h  Animation2DAsset.cpp  Animation2DAsset.h  Asset.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Texture.h  TextureAsset.cpp  TextureAsset.h
Graphite/src/Graphite/Assets/Management/: CMakeLists.txt  GameObjectManager.cpp  GameObjectManager.h  MeshManager.cpp  MeshManager.h  TextureManager.cpp  TextureManager.h
Graphite/src/Graphite/Assets/MeshCore/: CMakeLists.txt  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h
Graphite/src/Graphite/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Utilities.h  Window.cpp  Window.h  grInput.cpp  grInput.h  grLayer.cpp  grLayer.h  grLayerStack.cpp  grLayerStack.h  grLog.cpp  grLog.h  grWindow.cpp  grWindow.h  grpch.cpp  grpch.h
Graphite/src/Graphite/Core/Benchmarking/: Benchmarker.cpp  Benchmarker.h  CMakeLists.txt  CsvLogger.cpp  CsvLogger.h  SvgLogger.cpp
Graphite/src/Graphite/Core/Benchmarking/Profiling/: CMakeLists.txt  Timer.cpp  Timer.h  Tracker_RAM.cpp  Tracker_RAM.h
Graphite/src/Graphite/Core/Utilities/: grUtilities.h
Graphite/src/Graphite/EventCore/: AppEvent.h  CMakeLists.txt  ControllerEvent.h  EventCore.h  Events.h  KeyEvent.h  MouseEvent.h  grAppEvent.h  grEventCore.h  grEvents.h  grKeyEvent.h  grMouseEvent.h
Graphite/src/Graphite/GameObject/: Component.cpp  Component.h  ComponentContainer.h  Entity.cpp  Entity.h  Scene.h
Graphite/src/Graphite/GameObject/GameObject2D/: Bounds2D.h  Node2DComponent.cpp  Node2DComponent.h
Graphite/src/Graphite/GameObject3D/: Bounds3D.h
Graphite/src/Graphite/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiVulkanRenderer.cpp  ImGuiVulkanRenderer.h  imgui_impl_vulkan.h
Graphite/src/Graphite/Math/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Box.cpp  Box.h  CMakeLists.txt  GeoEntity.cpp  GeoEntity.h  Line.cpp  Line.h  Mathf.cpp  Mathf.h  Plain.cpp  Plain.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Sphere.cpp  Sphere.h  StraightLine.cpp  StraightLine.h  Transform.cpp  Transform.h  ViewFrustum.cpp  ViewFrustum.h
Graphite/src/Graphite/Physics/: Dynamics.cpp  Dynamics.h
Graphite/src/Graphite/Renderer/: CMakeLists.txt
Graphite/src/Graphite/Renderer/Color/: grColor.cpp  grColor.h
Graphite/src/Graphite/Renderer/Renderer2D/: CMakeLists.txt  Renderer2D.cpp  Renderer2D.h
Graphite/src/Graphite/Renderer/Renderer3D/: CMakeLists.txt  Renderer3D.cpp  Renderer3D.h
Graphite/src/Graphite/Renderer/RendererCore/: Buffer.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  PerspectiveCamera.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utilities.h  VertexBuffer.cpp  VertexBuffer.h
Graphite/src/Graphite/Renderer/RendererCore/Color/: CMakeLists.txt  Color.cpp  Color.h
Graphite/src/Graphite/Renderer/RendererCore/MeshCore/: Line.cpp  Line.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  Quad.cpp  Quad.h
Graphite/src/Graphite/Renderer/RendererCore/MeshManager/: Mesh.cpp
Graphite/src/Graphite/Renderer/RendererCore/Platform/: CMakeLists.txt
Graphite/src/Graphite/Renderer/RendererCore/Platform/Direct3D/: CMakeLists.txt  DxGraphicsContext.cpp  DxGraphicsContext.h  DxRenderContext.cpp  DxRenderContext.h
Graphite/src/Graphite/Renderer/RendererCore/Platform/GNMX/: CMakeLists.txt  GmnxGraphicsContext.cpp  GmnxGraphicsContext.h  GmnxRenderContext.h
Graphite/src/Graphite/Renderer/RendererCore/Platform/Metal/: CMakeLists.txt  MetalGraphicsContext.cpp  MetalGraphicsContext.h  MetalRenderContext.cpp  MetalRenderContext.h
Graphite/src/Graphite/Renderer/RendererCore/Platform/OpenGL/: CMakeLists.txt  GLRenderContext.cpp  GLRenderContext.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h
Graphite/src/Graphite/Renderer/RendererCore/Platform/Vulkan/: CMakeLists.txt  Utils.h  VkGraphicsContext.cpp  VkGraphicsContext.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanOrthographicCamera.cpp  VulkanOrthographicCamera.h  VulkanPerspectiveCamera.cpp  VulkanPerspectiveCamera.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  VulkanValidator.cpp  VulkanValidator.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Graphite/src/Graphite/Renderer/RendererCore/Platform/Vulkan/Shaders/: Compile_Shaders_GLSL450_SPIRV.bat  frag.spv  shader.frag  shader.vert  vert.spv
Graphite/src/Graphite/Renderer/RendererCore/TextureManager/: TexturePool.cpp  TexturePool.h
Graphite/src/Graphite/Scene/: Component.cpp  Component.h  ComponentContainer.h  ComponentFactory.cpp  ComponentFactory.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Graphite/src/Graphite/Scene/Scene2D/: ColliderRectComponent.cpp  ColliderRectComponent.h  Node2DComponent.cpp  Node2DComponent.h  RigidBody2DComponent.cpp  RigidBody2DComponent.h  Scene2D.cpp  Scene2D.h  Visible2DComponent.cpp  Visible2DComponent.h
Graphite/src/Graphite/Scene/SharedComponents/: AbstractBehaviorComponent.cpp  AbstractBehaviorComponent.h  EventQueueComponent.cpp  EventQueueComponent.h
Sandbox/src/: Sandbox.cpp
